# VKNP_RUST

VKNP/: Cargo.toml  supported_types.yaml
VKNP/bindings/: Cargo.toml
VKNP/core/: Cargo.toml
VKNP/core-types/: Cargo.toml  build.rs
VKNP/core-types/src/: generated_data_types.rs  lib.rs
VKNP/core-types/templates/: data_types.jinja
VKNP/core/src/: lib.rs  types.rs
VKNP/execution/: Cargo.toml
VKNP/execution/src/: kernel_manager.rs  lib.rs
VKNP/memory/: Cargo.toml
VKNP/memory/src/: lib.rs  pool.rs
VKNP/ops/: Cargo.toml  build.rs
VKNP/ops/src/: generated_tensor_any.rs  lib.rs  op.rs  types.rs
VKNP/ops/src/builtin/: add.rs
VKNP/ops/templates/: tensor_any.jinja
VKNP/src/: lib.rs
VKNP/tensor/: Cargo.toml
VKNP/tensor/src/: lib.rs  utils.rs
